--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: layrz_icons
 description: "A unified icon package."
-version: 1.0.0
-homepage: https://github.com/goldenm-software/layrz_icons
+version: 1.0.1
+homepage: https://icons.layrz.com
+repository: https://github.com/goldenm-software/layrz_icons
 
 environment:
   sdk: ^3.5.4
