--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ homepage: https://icons.layrz.com
 repository: https://github.com/goldenm-software/layrz_icons
 
 environment:
-  sdk: ^3.5.4
-  flutter: '>=3.3.0'
+  sdk: ">=3.0.0"
+  flutter: ">=3.22.0"
 
 dependencies:
   flutter:
