--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://icons.layrz.com
 repository: https://github.com/goldenm-software/layrz_icons
 
 environment:
-  sdk: ">=3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=3.22.0"
 
 dependencies:
