--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,16 @@
     "editor.suggestSelection": "first",
     "editor.tabCompletion": "onlySnippets"
   },
+  "[python]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit",
+      "source.fixAll": "explicit"
+    },
+    "editor.rulers": [120],
+    "editor.formatOnSaveMode": "file",
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "charliermarsh.ruff"
+  },
   "dart.lineLength": 120,
   "search.exclude": {
     "**/.fvm": true
