--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: layrz_icons
-description: "A unified icon package."
-version: 1.0.3
+description: "A unified icon package to simplify icon usage."
+version: 1.0.4
 homepage: https://icons.layrz.com
 repository: https://github.com/goldenm-software/layrz_icons
 
