--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,33 +12,33 @@ permissions:
   packages: read
 
 jobs:
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: ghcr.io/goldenm-software/flutter-web-builder:flutter3.24.5-python3.12
-  #     options: --user root
-  #     credentials:
-  #       username: ${{ github.repository_owner }}
-  #       password: ${{ secrets.GITHUB_TOKEN }}
+  publish:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/goldenm-software/flutter-web-builder:flutter3.24.5-python3.12
+      options: --user root
+      credentials:
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-  #   env:
-  #     PUB_JSON: ${{ secrets.LAYRZ_PUB_TOKEN }}
+    env:
+      PUB_JSON: ${{ secrets.LAYRZ_PUB_TOKEN }}
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-  #     - name: Authenticate
-  #       run: |
-  #         python3 authenticate.py
+      - name: Authenticate
+        run: |
+          python3 authenticate.py
       
-  #     - name: Publish
-  #       run: |
-  #         flutter pub publish --force
+      - name: Publish
+        run: |
+          flutter pub publish --force
       
-  #     - name: Cleanup
-  #       run: |
-  #         dart pub token remove https://pub.dev
+      - name: Cleanup
+        run: |
+          dart pub token remove https://pub.dev
 
   buils-site:
     runs-on: ubuntu-latest
